# fastapi-template-repository

./: .env.example  .flake8  .isort.cfg  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  README.md  docker-compose-debug.yaml  docker-compose-test.yaml  mypy.ini  pyproject.toml
api/: database.py  main.py  migrations.py  router.py  settings.py  tracing.py
api/routes/v1/: __init__.py  health.py  ready.py
api/tests/v1/: test_health.py  test_ready.py
