[tool.black]
line-length = 79
include = '\.pyi?$'

[tool.poetry]
name = "fastapi_template_repository"
version = "0.0.0"
description = ""
authors = ["porowns <kaleb.porter@bellhop.com>"]
packages = [
    { include="api", from="." },
]

[tool.poetry.scripts]
dev = "api.main:development"
prod = "api.main:production"
migrate = "api.main:migrate"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
uvicorn = "^0.18.3"
SQLAlchemy = "^1.4.41"
psycopg2 = "^2.9.3"
requests = "^2.28.1"
sentry-sdk = {extras = ["fastapi"], version = "^1.9.8"}
python-dotenv = "^0.21.0"
loguru = "^0.6.0"
logdna = "^1.18.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^2.10.1"
pre-commit = "^2.20.0"
mypy = "^0.971"
flake8 = "^5.0.4"
black = "^22.6.0"
isort = "^5.10.1"
types-requests = "^2.28.9"
bandit = "^1.7.4"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
